src/components/SingleArticle.css
#single-article {
  width: 90%;
  margin: 20px auto;
  border-radius: 10px;
  border: 1px solid black;
  padding: 20px;
}

.votes {
  display: flex;
  align-items: center;
  justify-content: center;
}
.votes > * {
  margin: 5px;
}
#comments {
  display: inline;
  margin: 10px;
}

#article-author,
#article-created-at {
  text-align: right;
}

#article-header {
  display: flex;
  justify-content: space-between;
}

#article-img {
  margin: 20px auto;
  width: 800px;
}

#article-topic {
  margin-left: 10px;
  font-size: 16px;
  background-color: lightgray;
  padding: 2px 10px;
  border-radius: 5px;
}

#article-body {
  font-size: 18px;
}

#single-article {
  text-align: center;
}

#comment-form {
  margin: auto;
  display: flex;
  flex-direction: column;
  max-width: 1000px;
}
#comment-form textarea {
  padding: 15px;
}
#comment-form button {
  margin-top: 10px;
  width: 120px;
}

#comment-adder-msg {
  text-align: center;
  margin: 50px 0;
}

.vote-btn {
  cursor: pointer;
}

.error-msg {
  color: red;
}

.success-msg {
  color: green;
}

.disabled {
  pointer-events: none;
}

#deleted-msg {
  border-radius: 5px;
  padding: 15px 0;
  width: 200px;
  text-align: center;
  background-color: rgb(240, 239, 239);
  position: fixed;
  bottom: 0;
  left: 50px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

@media only screen and (max-width: 870px) {
  body {
    background-color: lightblue;
  }

  #article-img {
    width: 500px;
  }
}
@media only screen and (max-width: 550px) {
  body {
    background-color: lightblue;
  }

  #article-img {
    width: 300px;
  }
}

